# hogl

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  LICENSE  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  hogl.sln
dependencies/: README.md  glfw3.lib  pugixml.lib
hogl/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  cpp.hint  hogl.sln  hogl.vcxproj  hogl.vcxproj.filters
hogl-c/hogl/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  hogl.sln  hogl.vcxproj  hogl.vcxproj.filters
hogl-c/hogl/hogl.dir/MinSizeRel/: objects.txt
hogl-c/hogl/hogl.dir/RelWithDebInfo/: objects.txt
hogl-c/hogl/lib/: Glad.lib
hogl-c/hogl/src/: hogl-r.h  hogl.cpp  hogl.h  hogl_context.cpp  hogl_context.h  hogl_cpp_types.h  hogl_input.cpp  hogl_input.h  hogl_types.h  hogl_wnd.cpp  hogl_wnd.h
hogl/src/: hogl.hpp  hogl_builder.cpp  hogl_builder.hpp  hogl_context.cpp  hogl_context.hpp  hogl_input.cpp  hogl_input.hpp  hogl_loader.hpp  hogl_object.cpp  hogl_object.hpp  hogl_renderer.cpp  hogl_renderer.hpp  hogl_types.hpp  hogl_wnd.cpp  hogl_wnd.hpp
hogl/src/hogl/: hogl.hpp  hogl_types.hpp
hogl/src/hogl/alevel_1/: hogl_geometry_gen.cpp  hogl_geometry_gen.hpp  hogl_min_math.cpp  hogl_min_math.hpp  hogl_object_handle.hpp
hogl/src/hogl/core/: framebuffer.cpp  framebuffer.hpp  gpu_buffer.cpp  gpu_buffer.hpp  hogl_builder.cpp  hogl_builder.hpp  hogl_context.cpp  hogl_context.hpp  hogl_input.cpp  hogl_input.hpp  hogl_loader.cpp  hogl_loader.hpp  hogl_object.cpp  hogl_object.hpp  hogl_renderer.cpp  hogl_renderer.hpp  hogl_wnd.cpp  hogl_wnd.hpp  object.cpp  object.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  ubo.cpp  ubo.hpp
hogl/src/hogl/engine/: hogl_application.cpp  hogl_application.hpp  instance_data.cpp  instance_data.hpp  object_storage.cpp  object_storage.hpp  standard_ubos.cpp  standard_ubos.hpp  ubo_manager.cpp  ubo_manager.hpp  window.cpp  window.hpp
hogl/src/hogl/engine/rendering/: draw_call.hpp
hogl/src/hogl/entity/: camera.cpp  camera.hpp  components.hpp  entity.cpp  entity.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  scene.cpp  scene.hpp
hogl/src/hogl/io/: asset_manager.cpp  asset_manager.hpp
hogl/src/hogl/shared/: hogl_def.hpp  pointer.hpp
hogl/src/hogl/shared/entity/: mesh.cpp  mesh.hpp
hogl/src/hogl/shared/io/: asset_manager.hpp
hogl_core/: CMakeLists.txt  cpp.hint
hogl_core/dependencies/: README.md
hogl_core/dependencies/gl/: glad.h
hogl_core/hogl_core.dir/MinSizeRel/: objects.txt
hogl_core/hogl_core.dir/RelWithDebInfo/: objects.txt
hogl_core/src/hogl_core/: hogl_core.c  hogl_core.h  hogl_gl_primitive.c  hogl_gl_primitive.h  hogl_log.c  hogl_log.h  hogl_memory.c  hogl_memory.h  hogl_render.c  hogl_render.h  hogl_types.c  hogl_vf.c  hogl_vf.h  hogl_wnd.c  hogl_wnd.h
hogl_core/src/hogl_core/audio/: hogl_al_primitive.c  hogl_al_primitive.h  hogl_audio_context.c  hogl_audio_context.h
hogl_core/src/hogl_core/graphics/: hogl_gl_primitive.c  hogl_gl_primitive.h  hogl_render.c  hogl_render.h  hogl_wnd.c  hogl_wnd.h
hogl_core/src/hogl_core/io/: hogl_vf.c  hogl_vf.h
hogl_core/src/hogl_core/os/: hogl_os.c  hogl_os.h
hogl_core/src/hogl_core/shared/: hogl_def.c  hogl_def.h  hogl_log.h  hogl_memory.c  hogl_memory.h
hogl_core/src/tests/: main.c  pbr.h
hogl_core/utility/: hvf_converter.py  test.hvf
hogl_ui/: CMakeLists.txt
hogl_ui/hogl_ui.dir/MinSizeRel/: objects.txt
hogl_ui/hogl_ui.dir/RelWithDebInfo/: objects.txt
hogl_ui/src/hogl_ui/: hogl_ui.cpp  hogl_ui.hpp
hogl_ui/src/hogl_ui/core/: application.cpp  application.hpp  element.cpp  element.hpp  input.cpp  input.hpp  transform.cpp  transform.hpp  ui_parser.cpp  ui_parser.hpp  vertex_list.cpp  vertex_list.hpp
hogl_ui/src/hogl_ui/elements/: button.cpp  button.hpp  free_layout.cpp  free_layout.hpp  region.cpp  region.hpp  root.cpp  root.hpp
hogl_ui/src/hogl_ui/shared/: hogl_ui_def.hpp
libhogl-sys/: Cargo.toml
libhogl-sys/src/: bindings.rs  build.rs  lib.rs
sandbox/: CMakeLists.txt  Cargo.toml  sandbox.vcxproj  sandbox.vcxproj.filters
sandbox/src/: current_test.hpp  main.cpp  pbr_test.hpp  quad_test.hpp  texture_test.hpp
sandbox/src/res/: README.md
sandbox/src/shaders/pbr/: 2.2.2.background.fs  2.2.2.background.vs  2.2.2.cubemap.vs  2.2.2.equirectangular_to_cubemap.fs  2.2.2.irradiance_convolution.fs  2.2.2.pbr.fs  2.2.2.pbr.vs  2.2.2.prefilter.fs
sandbox/src/shaders/test/: 0.0.0.fs  0.0.1.fs
tests/: CMakeLists.txt
tests/src/: lib.h  main.cpp  pbr.h  pbr_class.h  pbr_cpp.h  ui.h
