[package]
name = "libhogl-sys"
version = "0.1.0"
authors = ["nfwGytautas <gytautas.kk@gmail.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[build-dependencies]
bindgen = "0.54.0"
